# exampass-deepseek

./: .gitignore  HERMES_SKILL.md  README.md  exampass.py  extractor.py  pyproject.toml  requirements.txt  template_engine.py
.github/workflows/: test.yml
tests/: test_extractor.py
